--- a/client/main.html
+++ b/client/main.html
@@ -3,5 +3,5 @@
 </head>
 
 <body>
-  <div id="react-target"></div>
+  <div style= " display: flex; flex-direction: column; height: 100%;" id="react-target"></div>
 </body>
